# csrd-lake

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: csrd_lake.py
dashboard/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
dashboard/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx
dashboard/app/companies/: page.tsx
dashboard/app/company/[ticker]/: page.tsx
dashboard/app/portfolio/: page.tsx
dashboard/components/: confidence-badge.tsx  confidence-explainer.tsx  metric-table.tsx
dashboard/components/ui/: badge.tsx  card.tsx  table.tsx
dashboard/lib/: data.ts  utils.ts
dashboard/lib/data/: disclosures.json
dashboard/scripts/: record-gif.mjs  screenshot.mjs
dbt_project/: .gitignore  dbt_project.yml  packages.yml  profiles.yml
dbt_project/models/marts/: _models.yml  dim_company.sql  dim_metric.sql  dim_period.sql  fact_disclosure.sql  mart_disclosure_published.sql  mart_disclosure_review_queue.sql
dbt_project/models/staging/: _models.yml  _sources.yml  stg_disclosure.sql
dbt_project/seeds/: companies_seed.csv  esrs_metrics_seed.csv  periods_seed.csv
dbt_project/tests/: confidence_score_in_unit_interval.sql  metric_value_in_source_text.sql  published_and_review_queue_disjoint.sql
docs/: PORTABILITY.md  PRD.md  PROJECT_CONTEXT.md
docs/ADR/: README.md
scripts/: bootstrap_snowflake.py  dbt_run.py  export_dashboard_data.py  generate_snowflake_keypair.py
src/csrd_lake/: __init__.py
src/csrd_lake/extraction/: __init__.py  batch.py  cli.py  confidence.py  llm.py  prompts.py  schemas.py
src/csrd_lake/ingestion/: __init__.py  downloader.py  manifest.py
src/csrd_lake/ingestion/data/: cac40.toml
src/csrd_lake/warehouse/: __init__.py  ddl.sql  duckdb_loader.py  loader.py
tests/: test_confidence.py  test_dag_structure.py  test_dashboard_structure.py  test_dbt_project_structure.py  test_downloader.py  test_duckdb_loader.py  test_llm.py  test_manifest.py  test_smoke.py  test_warehouse_loader.py
