[project]
name = "csrd-lake"
version = "0.1.0"
description = "End-to-end CSRD/ESRS data pipeline reference implementation — Snowflake + dbt + Airflow + multilingual GenAI extraction. Portfolio piece."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Pyae Sone Kyaw", email = "pyaesonekyaw101010@gmail.com" }]
keywords = ["csrd", "esrs", "data-engineering", "snowflake", "dbt", "airflow", "genai"]

dependencies = [
    # LLM SDKs
    "anthropic>=0.42.0",
    "mistralai>=1.5.0",

    # PDF parsing
    "pdfplumber>=0.11.4",
    "pypdf>=5.1.0",

    # Schema validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Language detection
    "langdetect>=1.0.9",

    # Snowflake (primary warehouse target per PRD)
    "snowflake-connector-python>=3.13.0",
    "snowflake-sqlalchemy>=1.7.0",

    # DuckDB (local-development warehouse fallback per PRD Decision Log 2026-04-30)
    "duckdb>=1.1.0",

    # Data utilities
    "pandas>=2.2.0",
    "polars>=1.18.0",

    # HTTP / scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=9.0.0",

    # Logging / config
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
airflow = [
    # Pinned to match Airflow 2.10 constraints — actual install via Docker Compose
    "apache-airflow>=2.10.0,<2.11.0",
]
dbt = [
    "dbt-core>=1.9.0",
    "dbt-snowflake>=1.9.0",
    "dbt-duckdb>=1.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-beautifulsoup4",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csrd_lake"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",        # pycodestyle
    "F",             # pyflakes
    "I",             # isort
    "B",             # bugbear
    "C4",            # comprehensions
    "UP",            # pyupgrade
    "N",             # pep8-naming
    "S",             # bandit
    "T20",           # no print
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length handled by formatter
    "S101",          # asserts allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"airflow/dags/**" = ["T201"]  # DAGs may use print for Airflow log capture
"src/csrd_lake/extraction/cli.py" = ["T201"]  # CLI legitimately writes to stdout

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["langdetect.*", "pdfplumber.*", "snowflake.*", "airflow.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--cov=src/csrd_lake",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",  # Weekend 1 floor; raises to 80% by Weekend 2 ship
]
markers = [
    "smoke: minimal cold-start sanity test (must always pass)",
    "integration: requires API keys / Snowflake connection",
    "slow: takes >5s",
]

[tool.coverage.run]
source = ["src/csrd_lake"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
